k8s-manifests/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-worker-deployment
  labels: 
    app: data-worker
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-worker
  template:
    metadata:
      labels:
        app: data-worker
    spec:
      containers:
      - name: worker
        image: mkocik/iot-data-worker:v1.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
        livenessProbe:
          exec:
            command:
            - pgrep
            - -f
            - DataWorker.dll
          initialDelaySeconds: 15
          periodSeconds: 20
          failureThreshold: 3
