k8s-manifests/ingestion-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingestion-api
  template:
    metadata:
      labels:
        app: ingestion-api
    spec:
      containers:
      - name: api
        image: mkocik/iot-ingestion-api:v1.0
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: ingestion-api-service
spec:
  type: NodePort
  selector:
    app: ingestion-api
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30000
