k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"

    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection "upgrade";

    nginx.ingress.kubernetes.io/proxy-body-size: "1m"

spec:
  rules:
  - host: iot.local   
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: ingestion-api-service
            port:
              number: 80

      - path: /healthz
        pathType: Prefix
        backend:
          service:
            name: ingestion-api-service
            port:
              number: 80

      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: ws-hub-service
            port:
              number: 80

      - path: /rabbitmq
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-service
            port:
              number: 15672
